--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -1,27 +1,34 @@
+---
 # This kustomization.yaml is not intended to be run by itself,
-# since it depends on service name and namespace that are out of this kustomize package.
+# since it depends on service name and namespace that are out of this kustomize
+# package.
 # It should be run by config/default
 resources:
-- bases/clair.projectquay.io_indexers.yaml
-- bases/clair.projectquay.io_matchers.yaml
-- bases/clair.projectquay.io_notifiers.yaml
+  - bases/clair.projectquay.io_clairs.yaml
+  - bases/clair.projectquay.io_indexers.yaml
+  - bases/clair.projectquay.io_matchers.yaml
+  - bases/clair.projectquay.io_notifiers.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
+#- patches/webhook_in_clairs.yaml
 #- patches/webhook_in_indexers.yaml
 #- patches/webhook_in_matchers.yaml
 #- patches/webhook_in_notifiers.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
-# [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
+# [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER]
+# prefix.
 # patches here are for enabling the CA injection for each CRD
+#- patches/cainjection_in_clairs.yaml
 #- patches/cainjection_in_indexers.yaml
 #- patches/cainjection_in_matchers.yaml
 #- patches/cainjection_in_notifiers.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
-# the following config is for teaching kustomize how to do kustomization for CRDs.
+# the following config is for teaching kustomize how to do kustomization for
+# CRDs.
 configurations:
-- kustomizeconfig.yaml
+  - kustomizeconfig.yaml
