--- a/config/crd/patches/cainjection_in_clairs.yaml
+++ b/config/crd/patches/cainjection_in_clairs.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: indexers.clair.projectquay.io
+  name: clairs.clair.projectquay.io
