--- a/config/webhook/kustomization.yaml
+++ b/config/webhook/kustomization.yaml
@@ -6,5 +6,8 @@ resources:
   - manifests.yaml
   - service.yaml
 
+patchesStrategicMerge:
+  - validatingwebhook_selector.yaml
+
 configurations:
   - kustomizeconfig.yaml
