--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -1,30 +1,3 @@
-# ---
-# apiVersion: admissionregistration.k8s.io/v1
-# kind: MutatingWebhookConfiguration
-# metadata:
-#   creationTimestamp: null
-#   name: mutating-webhook-configuration
-# webhooks:
-# - admissionReviewVersions:
-#   - v1
-#   clientConfig:
-#     service:
-#       name: webhook-service
-#       namespace: system
-#       path: /mutate-batch-tutorial-kubebuilder-io-v1-cronjob
-#   failurePolicy: Fail
-#   name: mcronjob.kb.io
-#   rules:
-#   - apiGroups:
-#     - batch.tutorial.kubebuilder.io
-#     apiVersions:
-#     - v1
-#     operations:
-#     - CREATE
-#     - UPDATE
-#     resources:
-#     - cronjobs
-#   sideEffects: None
 
 ---
 apiVersion: admissionregistration.k8s.io/v1
@@ -33,34 +6,25 @@ metadata:
   creationTimestamp: null
   name: validating-webhook-configuration
 webhooks:
-  - name: vconfig.clair.projectquay.io
-    admissionReviewVersions:
-      - v1
-      - v1beta1
-    sideEffects: None
-    failurePolicy: Fail
-    matchPolicy: Equivalent
-    # This is the important bit that makes sure the webhook doesn't get sent
-    # every ConfigMap or Secret on the cluster:
-    objectSelector:
-      matchExpressions:
-        - key: 'clair.projectquay.io/config'
-          operator: In
-          values:
-            - v1
-    clientConfig:
-      service:
-        name: webhook-service
-        namespace: system
-        path: /validate-clair-config
-    rules:
-      - apiGroups:
-          - core
-        apiVersions:
-          - v1
-        resources:
-          - configmaps
-          - secrets
-        operations:
-          - CREATE
-          - UPDATE
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-clair-config
+  failurePolicy: Fail
+  name: vconfig.c.pq.io
+  rules:
+  - apiGroups:
+    - ""
+    apiVersions:
+    - v1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - configmaps
+    - secrets
+  sideEffects: None
