api: additional test coverage

--- a/config/webhook/validatingwebhook_selector.yaml
+++ b/config/webhook/validatingwebhook_selector.yaml
@@ -10,5 +10,4 @@ webhooks:
     objectSelector:
       matchExpressions:
         - key: 'clair.projectquay.io/config'
-          operator: In
-          values: [v1]
+          operator: Exists
