start mutating tests

--- a/config/webhook/kustomization.yaml
+++ b/config/webhook/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 
 patchesStrategicMerge:
   - validatingwebhook_selector.yaml
+  - mutatingwebhook_selector.yaml
 
 configurations:
   - kustomizeconfig.yaml
