--- a/controllers/templates/bases/hpa.yaml
+++ b/controllers/templates/bases/hpa.yaml
@@ -10,23 +10,23 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: app
-  metrics:
-    - type: Pods
-      pods:
-        metric:
-          name: tbd
-          selector: {}
-        target:
-          type: utilization
-          averageUtilization: 85
-    - type: Object
-      object:
-        metric:
-          name: requests-per-second
-        describedObject:
-          apiVersion: networking.k8s.io/v1beta1
-          kind: Ingress
-          name: main-route
-        target:
-          type: Value
-          value: 10k
+  metrics: []
+#   - type: Pods
+#     pods:
+#       metric:
+#         name: tbd
+#         selector: {}
+#       target:
+#         type: Utilization
+#         averageUtilization: 85
+#   - type: Object
+#     object:
+#       metric:
+#         name: requests-per-second
+#       describedObject:
+#         apiVersion: networking.k8s.io/v1beta1
+#         kind: Ingress
+#         name: main-route
+#       target:
+#         type: Value
+#         value: 10k
