--- a/controllers/testdata/want.indexer.yaml
+++ b/controllers/testdata/want.indexer.yaml
@@ -103,26 +103,7 @@ metadata:
   name: indexer-hpa
 spec:
   maxReplicas: 10
-  metrics:
-  - pods:
-      metric:
-        name: tbd
-        selector: {}
-      target:
-        averageUtilization: 85
-        type: utilization
-    type: Pods
-  - object:
-      describedObject:
-        apiVersion: networking.k8s.io/v1beta1
-        kind: Ingress
-        name: main-route
-      metric:
-        name: requests-per-second
-      target:
-        type: Value
-        value: 10k
-    type: Object
+  metrics: []
   minReplicas: 1
   scaleTargetRef:
     apiVersion: apps/v1
