controllers: implement image changing
This can't be done in the controller with the kustomize "image"
transformer because that logic is not exposed.

--- a/controllers/testdata/want.indexer.yaml
+++ b/controllers/testdata/want.indexer.yaml
@@ -46,7 +46,7 @@ spec:
           value: /run/clair
         - name: CLAIR_CONF
           value: /etc/clair.yaml
-        image: clair:latest
+        image: test/image:tag
         livenessProbe:
           httpGet:
             path: /healthz
