--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -6,23 +5,15 @@
 *.so
 *.dylib
 bin
-testbin/*
-
 # Test binary, build with `go test -c`
 *.test
-
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
-# Kubernetes Generated files - skip generated files, except for vendored files
-
-!vendor/**/zz_generated.*
-
+vendor
 # editor and IDE paraphernalia
 .idea
 *.swp
 *.swo
 *~
-
 # docs
 */*.png
